--- a/spec/system/createInitialState.spec.yaml
+++ b/spec/system/createInitialState.spec.yaml
@@ -65,7 +65,9 @@ out:
           lineId: __undefined__
           historySequenceIndex: __undefined__
       historySequence:
-        - sectionId: "..."
+        - sectionId: "section1"
+          initialState: {}
+          lines: []
       configuration: {}
       views: []
       bgm:
@@ -168,7 +170,13 @@ out:
           lineId: __undefined__
           historySequenceIndex: __undefined__
       historySequence:
-        - sectionId: "..."
+        - sectionId: "section1"
+          initialState:
+            inventory:
+              items:
+                - id: sword
+                  name: Steel Sword
+          lines: []
       configuration: {}
       views: []
       bgm:
@@ -249,7 +257,10 @@ out:
           lineId: __undefined__
           historySequenceIndex: __undefined__
       historySequence:
-        - sectionId: "..."
+        - sectionId: "section1"
+          initialState:
+            settings: {}
+          lines: []
       configuration: {}
       views: []
       bgm:
@@ -351,7 +362,9 @@ out:
           lineId: __undefined__
           historySequenceIndex: __undefined__
       historySequence:
-        - sectionId: "..."
+        - sectionId: "section1"
+          initialState: {}
+          lines: []
       configuration: {}
       views: []
       bgm:
