Removed offset logic, deleted nextLineFromComplete, moved add history logic to separate functions

--- a/spec/system/actions/sectionTransition.spec.yaml
+++ b/spec/system/actions/sectionTransition.spec.yaml
@@ -46,6 +46,7 @@ out:
     isDialogueUIVisible: true
     pendingEffects:
       - name: "render"
+      - name: "render"
       - name: "handleLineActions"
   projectData:
     story:
