--- a/spec/system/actions/rollbackToLine.spec.yaml
+++ b/spec/system/actions/rollbackToLine.spec.yaml
@@ -207,7 +207,7 @@ out:
                 - "act1"
             - id: "3"
 ---
-case: returns unchanged state for invalid lineId
+case: throws error for invalid lineId
 in:
   - state:
       projectData:
@@ -236,31 +236,7 @@ in:
                 - id: "2"
   - sectionId: "section1"
     lineId: "nonExistentLine"
-out:
-  projectData:
-    story:
-      scenes: {}
-    resources:
-      variables: {}
-  global:
-    isLineCompleted: true
-    pendingEffects: []
-  contexts:
-    - variables: {}
-      currentPointerMode: "history"
-      pointers:
-        read:
-          sectionId: "section1"
-          lineId: "3"
-        history:
-          sectionId: "section1"
-          lineId: "1"
-      historySequence:
-        - sectionId: "section1"
-          initialState: {}
-          lines:
-            - id: "1"
-            - id: "2"
+throws: "Line nonExistentLine not found in section section1 history"
 ---
 case: handles multiple actions on same line
 in:
