Rollback to line by offset (#140)
* Added updateVariable id to history for backtracking

* Added offset support for backtracking

* Added check for lineid and offset existence

* Removed offset logic, deleted nextLineFromComplete, moved add history logic to separate functions

* Added function that uses offset to backtrack

* Reduced number of tests

* fixed lint

* Changed backtrack warning to error

* Changed naming from backtrack to rollback

* Updated test

* Offset for rollback now default to -1, and only supports negative numbers

--- a/spec/system/createInitialState.spec.yaml
+++ b/spec/system/createInitialState.spec.yaml
@@ -65,7 +65,10 @@ out:
           lineId: __undefined__
           historySequenceIndex: __undefined__
       historySequence:
-        - sectionId: "..."
+        - sectionId: "section1"
+          initialState: {}
+          lines:
+            - id: "line1"
       configuration: {}
       views: []
       bgm:
@@ -168,7 +171,14 @@ out:
           lineId: __undefined__
           historySequenceIndex: __undefined__
       historySequence:
-        - sectionId: "..."
+        - sectionId: "section1"
+          initialState:
+            inventory:
+              items:
+                - id: sword
+                  name: Steel Sword
+          lines:
+            - id: "line1"
       configuration: {}
       views: []
       bgm:
@@ -249,7 +259,11 @@ out:
           lineId: __undefined__
           historySequenceIndex: __undefined__
       historySequence:
-        - sectionId: "..."
+        - sectionId: "section1"
+          initialState:
+            settings: {}
+          lines:
+            - id: "line1"
       configuration: {}
       views: []
       bgm:
@@ -351,7 +365,10 @@ out:
           lineId: __undefined__
           historySequenceIndex: __undefined__
       historySequence:
-        - sectionId: "..."
+        - sectionId: "section1"
+          initialState: {}
+          lines:
+            - id: "line1"
       configuration: {}
       views: []
       bgm:
